--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -22,11 +22,19 @@ body
     /* padding: 0; */
 
 }
-:root {
-    color-scheme: dark;
+/* :root {
    
-}
+} */
 
+a 
+{
+    color: #000000;
+    text-decoration: none;
+}
+a:hover
+{
+    color: rgb(255, 201, 101);
+} 
 
 .grid-container
 {
@@ -81,4 +89,69 @@ footer
     align-items: center;
     color: #ffffff;
 
+}
+
+/* PRODUCTS */
+/* PRODUCTS */
+/* PRODUCTS */
+
+.products
+{
+
+    display: flex;
+    flex-wrap:wrap ;
+    justify-content: center;
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+    margin-top: 3.2rem;
+    margin-bottom: 3.2rem;
+
+}
+
+.products li
+{
+
+    
+    flex: 0 1 30rem;
+    margin: 1rem;
+    margin-bottom: 0;
+    height: 42rem;
+    border-top: .2rem #e0e0e0 solid;
+
+}
+
+.product
+{
+
+    display: flex;
+    flex-direction:  column;
+    justify-content: space-between;
+    height: 100%;
+
+}
+.product img 
+{
+    width: 100%;
+    max-height: 26rem;
+    min-width: 22rem;
+    margin-top: 1rem;
+    
+}
+
+.product_data a 
+{
+
+    font-size: 2.2rem;
+
+}
+.product_data p:nth-child(2)
+{
+    font-size: 1.2rem;
+    color: #808080;
+
+}
+.product_data p:nth-child(3)
+{
+    font-size: 2rem;
 }
