--- a/frontend/style.css
+++ b/frontend/style.css
@@ -145,13 +145,26 @@ footer
     font-size: 2.2rem;
 
 }
-.product_data p:nth-child(2)
+.product_data p:nth-child(3)
 {
     font-size: 1.2rem;
     color: #808080;
 
 }
-.product_data p:nth-child(3)
+.product_data p:nth-child(4)
 {
     font-size: 2rem;
 }
+/*rating*/
+.rating
+{
+    color:  #ffc000;
+    font-size: 1.4rem;
+}
+
+.rating span:last-child
+{
+    color: #444444;
+    font-size: 1.4rem;
+}
+
