--- a/frontend/style.css
+++ b/frontend/style.css
@@ -103,15 +103,17 @@ footer
 
 }
 
+button{cursor: pointer;}
+input,
 button
 {
     font:  1.6rem helvetica;
-    cursor: pointer;
     border:  .1rem #808080 solid;
     border-radius: 5px;
     padding: .8rem;
     border-style: solid;
 }
+input:hover,
 button:hover
 {
     border: .1rem #404040 solid;;
@@ -344,4 +346,33 @@ button.any
 {
     font-size: 1.3rem;
     padding: 0.5rem;
+}
+
+
+/*FORM*/
+
+.form-container
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+
+.form-items
+{
+    display: flex;
+    flex-direction: column;
+    width: 32rem;
+    padding: 2rem;
+    border: .1rem #c0c0c0 solid;
+    border-radius: .5rem;
+    list-style-type: none;
+}
+.form-items li
+{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 1rem;
+    margin-top: 1rem;
 }
