--- a/frontend/style.css
+++ b/frontend/style.css
@@ -2,7 +2,7 @@
 {
 
     box-sizing: border-box;
-    
+
 }
 
 .fw
@@ -19,6 +19,49 @@
 .error
 {
     color: #c04040;
+}
+/*ANIMACION*/
+.word {
+  font-family: 'Roboto Mono', monospace;
+  background-color: #55E291
+  height: 1.4em;
+  padding: 0 14px 0 7px;
+  display: inline-block;
+  vertical-align: middle;
+  position: relative;
+}
+.overlay
+{
+    display: none;
+    position: fixed;
+    z-index:1000;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(16, 16, 16, 0.5);
+
+}
+.overlay.active
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+}
+.overlay>div
+{
+    background-color: #fff;
+    color: #000000;
+    border-radius: .5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    max-width: 40rem;
+}
+.overlay>div>*
+{
+    margin: 2rem;
 }
 html
 {
