--- a/frontend/style.css
+++ b/frontend/style.css
@@ -398,7 +398,7 @@ button.any
 {
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     height: 100%;
 }
 
@@ -419,3 +419,27 @@ button.any
     margin-bottom: 1rem;
     margin-top: 1rem;
 }
+
+
+/*CHECK STEPS*/
+.chekout-steps
+{
+    display: flex;
+    justify-content: space-between;
+    width: 40rem;
+    margin: 1rem auto;
+}
+.chekout-steps > div
+{
+    border-top: .3rem  #c0c0c0 solid;
+    color: #c0c0c0;
+    padding: 1rem;
+    flex: 1 1 ;
+}
+
+.chekout-steps > div.active
+{
+    color: rgb(255, 201, 101);
+    border-top: rgb(255, 201, 101) .3rem solid;
+}
+
