--- a/frontend/style.css
+++ b/frontend/style.css
@@ -443,3 +443,52 @@ button.any
     border-top: rgb(255, 201, 101) .3rem solid;
 }
 
+/*Order*/
+
+.order
+{
+    display: flex;
+    flex-wrap: wrap;
+    padding: 1rem;
+    justify-content: space-between;
+    gap: .8rem;
+}
+.order h2
+{
+    font-size: 2rem;
+}
+.order-info1,.order-info2
+{
+    margin-bottom: .8rem;
+    padding: 1rem;
+    background-color: #F0F0F0;
+    border-radius: .5rem;
+}
+
+.order-info
+{
+    flex: 3 1 60rem;
+}
+.order-action
+{
+    flex: 1 1 20rem;
+    background-color: #F0F0F0;
+    border-radius: .5rem;
+    padding: 1rem;
+}
+.order-action > ul
+{
+    padding: 0;
+    list-style-type: none;
+}
+.order-action li
+{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 1rem;
+}
+.order-action .total
+{
+    font-size: 2rem;
+    font-weight: bold;
+}
