--- a/frontend/style.css
+++ b/frontend/style.css
@@ -67,7 +67,7 @@ html
 {
 
     font-size: 62.5%; /* 16px * 62.5 = 10px = 1rem */
-
+    min-width: ;
 }
 
 body
@@ -98,9 +98,10 @@ a:hover
         'header'
         'main'
         'footer';
-    grid-template-columns:  1fr;
-    grid-template-rows: 5rem 1fr 5rem;
+    grid-template-columns: 1fr;
+  grid-template-rows: 5rem 1fr 5rem;
     height: 100%;
+    width: 100%;
 }
 
 header
