--- a/frontend/style.css
+++ b/frontend/style.css
@@ -23,7 +23,7 @@
 /*ANIMACION*/
 .word {
   font-family: 'Roboto Mono', monospace;
-  background-color: #55E291
+  background-color: #55E291;
   height: 1.4em;
   padding: 0 14px 0 7px;
   display: inline-block;
@@ -100,7 +100,7 @@ a:hover
         'footer';
     grid-template-columns: 1fr;
   grid-template-rows: 5rem 1fr 5rem;
-    height: 100%;
+    height: 100vh;
     width: 100%;
 }
 
@@ -400,7 +400,7 @@ button.any
     display: flex;
     justify-content: center;
     align-items: flex-start;
-    height: 100%;
+    /*height: 100%;*/
 }
 
 .form-items
